# kdesktop

./: .gitignore  ChangeLog  Doxyfile  Makefile.in  README  TODO  VERSION  acinclude.m4  config.h.in  configure  configure.in  help.htm  index.html  katapult.kdevelop  katapult.kdevses  kdebase.kdevelop  kdebase.kdevses  kdelibs.kdevelop  kdelibs.kdevses  kdenetwork.kdevelop  kdepim.kdevelop  news.htm  places.htm
kaffeine/kaffeine/src/: Makefile.am  Makefile.in  drivescombo.cpp  drivescombo.h  inputmanager.cpp  kaffeine.cpp  kaffeine.desktop  kaffeine.h  kaffeineiface.h  kmultitabbar.h  kmultitabbar_p.h  pref.cpp  pref.h  startwindow.h  systemtray.h
kaffeine/kaffeine/src/input/: Makefile.am  kaffeineinput.cpp  kaffeineinput.h
kaffeine/kaffeine/src/player-parts/: Makefile.am
kaffeine/src/input/disc/: Makefile.am  Makefile.in  cddb.h  paranoia.cpp  paranoia.h
kaffeine/src/player-parts/kaffeine-part/: Makefile.am  Makefile.in  kaffeinepart.h
kde-i18n/cs/: Makefile.in  configure  configure.in
kde-i18n/cs/data/: Makefile.in
kde-i18n/cs/data/kdeedu/: Makefile.in
kde-i18n/cs/docs/: Makefile.am  Makefile.in
kde-i18n/cs/docs/common/: Makefile.in
kde-i18n/cs/docs/kdebase/: Makefile.in
kde-i18n/cs/docs/kdegraphics/: Makefile.in
kde-i18n/cs/docs/kdemultimedia/: Makefile.in
kde-i18n/cs/docs/kdeutils/: Makefile.in
kde-i18n/cs/messages/: Makefile.in  entry.desktop
kde-i18n/cs/messages/kdeaccessibility/: Makefile.in  kbstateapplet.po  kmag.po  kmousetool.po  kmouth.po  ksayit.po  kttsd.po  libKTTSD.po
kde-i18n/cs/messages/kdeaddons/: Makefile.in  akregator_konqplugin.po  alsaplayerui.po  ark_plugin.po  atlantikdesigner.po  audiorename_plugin.po  autorefresh.po  babelfish.po  charlatanui.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  dub.po  ffrs.po  fsview.po  imagerename_plugin.po  imgalleryplugin.po  katecppsymbolviewer.po  katefiletemplates.po  katefll_initplugin.po  katefll_plugin.po  katehelloworld.po  katehtmltools.po  kateinsertcommand.po  katekjswrapper.po  katemake.po  katemodeline.po  kateopenheader.po  katepybrowse.po  katesnippets.po  katetabbarextension.po  katetextfilter.po  katexmlcheck.po  katexmltools.po  kbinaryclock.po  kcmkuick.po  kfile_cert.po  kfile_desktop.po  kfile_folder.po  kfile_html.po  (+31 more)
kde-i18n/cs/messages/kdeadmin/: Makefile.in  kcmlilo.po  kcron.po  kdat.po  kfile_deb.po  kfile_rpm.po  knetworkconf.po  kpackage.po  ksysv.po  kuser.po  secpolicy.po
kde-i18n/cs/messages/kdeartwork/: Makefile.in  klock.po  kpartsaver.po  kstyle_phase_config.po  kwin_art_clients.po  kxsconfig.po
kde-i18n/cs/messages/kdebase/: Makefile.in  appletproxy.po  clockapplet.po  display.po  dockbarextension.po  drkonqi.po  extensionproxy.po  filetypes.po  htmlsearch.po  joystick.po  kaccess.po  kappfinder.po  kasbarextension.po  kate.po  kay.po  kcmaccess.po  kcmaccessibility.po  kcmarts.po  kcmbackground.po  kcmbell.po  kcmcgi.po  kcmcolors.po  kcmcomponentchooser.po  kcmcrypto.po  kcmcss.po  kcmenergy.po  kcmfonts.po  kcmhtmlsearch.po  kcmicons.po  kcminfo.po  kcminput.po  kcmioslaveinfo.po  kcmkclock.po  kcmkded.po  kcmkdnssd.po  kcmkeys.po  kcmkicker.po  kcmkio.po  kcmkonq.po  kcmkonqhtml.po  (+116 more)
kde-i18n/cs/messages/kdeedu/: Makefile.in  blinken.po  kalzium.po  kanagram.po  kbruch.po  keduca.po  kfile_drgeo.po  kfile_kig.po  kgeography.po  khangman.po  kig.po  kiten.po  klatin.po  klettres.po  kmplot.po  kpercentage.po  kstars.po  ktouch.po  kturtle.po  kverbos.po  kvoctrain.po  kwordquiz.po  libkdeedu.po
kde-i18n/cs/messages/kdegames/: Makefile.in  atlantik.po  kasteroids.po  katomic.po  kbackgammon.po  kbattleship.po  kblackbox.po  kbounce.po  kenolaba.po  kfouleggs.po  kgoldrunner.po  kjumpingcube.po  klickety.po  klines.po  kmahjongg.po  kmines.po  knetwalk.po  kolf.po  konquest.po  kpat.po  kpoker.po  kreversi.po  ksame.po  kshisen.po  ksirtet.po  ksmiletris.po  ksnake.po  ksokoban.po  kspaceduel.po  ktron.po  ktuberling.po  kwin4.po  libkdegames.po  libksirtet.po  lskat.po
kde-i18n/cs/messages/kdegraphics/: Makefile.in  kcm_kviewcanvasconfig.po  kcm_kviewgeneralconfig.po  kcm_kviewpluginsconfig.po  kcm_kviewviewerpluginsconfig.po  kcmkamera.po  kcoloredit.po  kdjview.po  kdvi.po  kfax.po  kfaxview.po  kfile_bmp.po  kfile_dds.po  kfile_dvi.po  kfile_exr.po  kfile_gif.po  kfile_ico.po  kfile_jpeg.po  kfile_pcx.po  kfile_pdf.po  kfile_png.po  kfile_pnm.po  kfile_ps.po  kfile_rgb.po  kfile_tga.po  kfile_tiff.po  kfile_xbm.po  kfile_xpm.po  kgamma.po  kghostview.po  kiconedit.po  kmrml.po  kolourpaint.po  kooka.po  kpdf.po  kpovmodeler.po  kruler.po  ksnapshot.po  ksvgplugin.po  kuickshow.po  (+11 more)
kde-i18n/cs/messages/kdelibs/: Makefile.in  cupsdconf.po  kabc_dir.po  kabc_file.po  kabc_ldapkio.po  kabc_net.po  kabc_sql.po  kabcformat_binary.po  katepart.po  kcmshell.po  kdelibs.po  kdeprint.po  kfileaudiopreview.po  kio.po  kio_help.po  kioexec.po  kmcop.po  knotify.po  kstyle_highcontrast_config.po  kstyle_plastik_config.po  ktexteditor_autobookmarker.po  ktexteditor_docwordcompletion.po  ktexteditor_insertfile.po  ktexteditor_isearch.po  ktexteditor_kdatatool.po  libkscreensaver.po  ppdtranslations.po  timezones.po
kde-i18n/cs/messages/kdemultimedia/: Makefile.in  artsbuilder.po  artscontrol.po  artsmodules.po  audiocd_encoder_lame.po  audiocd_encoder_vorbis.po  juk.po  kaboodle.po  kaudiocreator.po  kcmaudiocd.po  kcmcddb.po  kfile_au.po  kfile_avi.po  kfile_flac.po  kfile_m3u.po  kfile_mp3.po  kfile_mpc.po  kfile_mpeg.po  kfile_ogg.po  kfile_sid.po  kfile_theora.po  kfile_wav.po  kio_audiocd.po  kmid.po  kmix.po  krec.po  kscd.po  libkcddb.po  noatun.po
kde-i18n/cs/messages/kdenetwork/: Makefile.in  dcoprss.po  kcm_krfb.po  (+22 more)
kde-i18n/fr/: configure  configure.in
kde-i18n/fr/data/: Makefile.in
kde-i18n/fr/docs/: Makefile.in
kde-i18n/fr/messages/: Makefile.in  entry.desktop  nbsp_gui_fr.txt  relecture_docs  relecture_gui
kdeui/: Makefile.am  kmainwindowiface.kidl
kdeui/kdetrayproxy/: module.kidl
kstyles/qinxstyle/: Makefile.am  Makefile.in  qinxstyle.cc  qinxstyle.h
kstyles/qinxstyle/config/: qinxstyleconfig.cc  styledialog.ui
(+57448 files in other folders)
