dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

AC_INIT(messages/Makefile.am)
AM_INIT_AUTOMAKE(kde-i18n-cs, "3.5.10")
AM_CONFIG_HEADER(config.h)
AC_SUBST(AUTODIRS)
AM_KDE_WITH_NLS
AC_CREATE_KFSSTND(default)
KDE_SET_PREFIX
AC_SUBST_KFSSTND
AC_PROG_INSTALL
AC_PROG_LN_S
KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ data/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/khangman/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/khangman/cs/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/klettres/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/klettres/alpha/Makefile ])
AC_CONFIG_FILES([ data/kdeedu/klettres/syllab/Makefile ])
AC_CONFIG_FILES([ docs/Makefile ])
AC_CONFIG_FILES([ docs/common/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/arts/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/bell/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/clock/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/crypto/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/email/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmaccess/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmsmserver/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kcmstyle/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/kdm/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/khtml/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kcontrol/passwords/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdeprint/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kdm/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/khelpcenter/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/devices/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/dma/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/interrupts/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/ioports/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/memory/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/partitions/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/pci/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/pcmcia/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/processor/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/scsi/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/sound/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/kinfocenter/xserver/Makefile ])
AC_CONFIG_FILES([ docs/kdebase/konsole/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/Makefile ])
AC_CONFIG_FILES([ docs/kdegraphics/kgamma/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdemultimedia/kcontrol/kmixcfg/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/kcmlowbatcrit/Makefile ])
AC_CONFIG_FILES([ docs/kdeutils/kcontrol/laptop/Makefile ])
AC_CONFIG_FILES([ messages/Makefile ])
AC_CONFIG_FILES([ messages/kdeaccessibility/Makefile ])
AC_CONFIG_FILES([ messages/kdeaddons/Makefile ])
AC_CONFIG_FILES([ messages/kdeadmin/Makefile ])
AC_CONFIG_FILES([ messages/kdeartwork/Makefile ])
AC_CONFIG_FILES([ messages/kdebase/Makefile ])
AC_CONFIG_FILES([ messages/kdeedu/Makefile ])
AC_CONFIG_FILES([ messages/kdegames/Makefile ])
AC_CONFIG_FILES([ messages/kdegraphics/Makefile ])
AC_CONFIG_FILES([ messages/kdelibs/Makefile ])
AC_CONFIG_FILES([ messages/kdemultimedia/Makefile ])
AC_CONFIG_FILES([ messages/kdenetwork/Makefile ])
AC_CONFIG_FILES([ messages/kdepim/Makefile ])
AC_CONFIG_FILES([ messages/kdesdk/Makefile ])
AC_CONFIG_FILES([ messages/kdetoys/Makefile ])
AC_CONFIG_FILES([ messages/kdeutils/Makefile ])
AC_CONFIG_FILES([ messages/kdevelop/Makefile ])
AC_CONFIG_FILES([ messages/kdewebdev/Makefile ])
AC_OUTPUT
# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test x$GXX = "xyes" -a x$kde_have_gcc_visibility = "xyes" -a x$kde_cv_val_qt_gcc_visibility_patched = "xno"; then
  echo ""
  echo "Your GCC supports symbol visibility, but the patch for Qt supporting visibility"
  echo "was not included. Therefore, GCC symbol visibility support remains disabled."
  echo ""
  echo "For better performance, consider including the Qt visibility supporting patch"
  echo "located at:"
  echo ""
  echo "http://bugs.kde.org/show_bug.cgi?id=109386"
  echo ""
  echo "and recompile all of Qt and KDE. Note, this is entirely optional and"
  echo "everything will continue to work just fine without it."
  echo ""
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
